<resources>
    <string name="app_name">TaxiShare</string>
    <string name="common_email_pattern_not_match">이메일 형식이 맞지 않습니다</string>
    <string name="common_pw_pattern_not_match">비밀번호 형식이 맞지 않습니다</string>
    <string name="common_pw_not_same">비밀번호는 숫자,영문,특수문자($@$!%*#?) 6~20자리로 구성됩니다</string>
    <string name="common_student_id_pattern_not_match">학번은 숫자 8개로 구성됩니다</string>
    <string name="common_nickname_pattern_not_match">닉네임 형식에 맞지 않습니다</string>
    <string name="common_open_gallery">이미지를 선택해주세요</string>
    <string name="common_select_gallery">이미지 선택</string>
    <string name="common_use_camera">사진 찍기</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="input_std_num">학번을 입력하세요</string>
    <string name="temporary_pw_send">임시 비밀번호 전송</string>
    <string name="temporary_pw_send_message">임시 비밀번호 전송중입니다</string>
    <string name="temporary_pw_send_success">임시 비밀번호를 전송했습니다</string>
    <string name="temporary_pw_send_fail">임시 비밀번호 전송을 실패했습니다</string>
    <string name="main_menu_party">TaxiShare</string>
    <string name="main_menu_register">Register</string>
    <string name="main_menu_my_page">MyPage</string>
    <string name="register_title">글 등록</string>
    <string name="register_title_hint">추가 설명을 입력해주세요</string>
    <string name="register_title_helper">내용은 100자 이내로 입력해주세요</string>
    <string name="register_start_time_hint">출발 시간</string>
    <string name="register_start_location_hint">출발 위치</string>
    <string name="register_end_location_hint">도착 위치</string>
    <string name="register_member">최대 인원</string>
    <string name="register_content">설명</string>
    <string name="register_post">등록</string>
    <string-array name="register_member_num">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="search_location_departure">출발지 검색</string>
    <string name="search_location_arrive">도착지 검색</string>
    <string name="search_location_recent">최근 검색 목록</string>
    <string name="search_location_register">저장 목록</string>
    <string name="login_title">Kit TaxiPool</string>
    <string name="login_id">아이디</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_sign_in">로그인</string>
    <string name="login_sign_up">회원가입</string>
    <string name="login_find_pw">비밀 번호가 기억나지 않으세요?</string>
    <string name="login_id_hint">아이디</string>
    <string name="login_pw_hint">비밀번호</string>
    <string name="login_auto_text">자동 로그인</string>
    <string name="login_button_text">LOG IN</string>
    <string name="login_sign_up_button_text">SIGN UP</string>
    <string name="login_find_pw_text">비밀번호를 잊으셨나요 ?</string>
    <string name="login_made_by_text">Made by Kaqui For KIT TaxiShare</string>
    <string name="login_fail">아이디 혹은 비밀번호를 확인해주세요</string>
    <string name="login_not_validated_user">메일을 통해 인증을 먼저 해주세요!</string>
    <string name="login">로그인 화면입니다 !</string>
    <string name="login_loading_text">로그인 중입니다</string>
    <string name="taxi_list_toolbar_title">택시 합승 목록</string>
    <string name="taxi_list_my_page_title">마이 페이지</string>
    <string name="taxi_list_start_time">출발 시간  : %s</string>
    <string name="taxi_list_party_num" >참여 인원(최대)" ": %d(%d)</string>
    <string-array name="major_list">
        <item>전공</item>
        <item>기계공학과</item>
        <item>기계설계공학과</item>
        <item>기계시스템공학과</item>
        <item>전자공학부</item>
        <item>정보전자전공</item>
        <item>제어 및 로봇전공</item>
        <item>전자통신정공</item>
        <item>전자 및 전파전공</item>
        <item>전자IT융합전공</item>
        <item>건축학부</item>
        <item>컴퓨터공학부</item>
        <item>건축학전공(5년제)</item>
        <item>건축공학전공</item>
        <item>산업공학부</item>
        <item>산업경영공학전공</item>
        <item>디자인공학전공</item>
        <item>신소재공학부</item>
        <item>화학소재융합공학부</item>
        <item>고분자공학전공</item>
        <item>소재디자인공학전공</item>
        <item>환경공학전공</item>
        <item>응용화학전공</item>
        <item>화학공학전공</item>
        <item>토목공학과</item>
        <item>컴퓨터소프트웨어공학과</item>
        <item>광시스템공학과</item>
        <item>메디컬IT융합공학과</item>
        <item>IT융합학과</item>
        <item>응용수학과</item>
        <item>경영학과</item>
        <item>기계공학과</item>
    </string-array>
    <string name="sign_up_personal_data">회원가입</string>
    <string name="sign_up_validation">VALIDATION</string>
    <string name="sign_up_id">아이디</string>
    <string name="sign_up_pw">비밀번호</string>
    <string name="sign_up_confirm_pw">비밀번호 확인</string>
    <string name="sign_up_loading_message">회원가입을 요청중입니다</string>
    <string name="sign_up_major">학과</string>
    <string name="sign_up_student_id">아이디만 !! @ 없이 !!</string>
    <string name="sign_up_ok">회원가입</string>
    <string name="sign_up_send_validation_email">인증 메일 전송</string>
    <string name="sign_up_nickname">닉네임</string>
    <string name="sign_up_finish">회원가입</string>
    <string name="sign_up_nickname_helper_text">닉네임은 3~20자로 구성됩니다.</string>
    <string name="sign_up_student_id_error">아이디는 4~30자의 영문 소문자와 숫자, 특수기호(_)만 사용할수 있습니다.</string>
    <string name="sign_up_email_validation">학교 이메일로 인증메일이 전송됩니다.</string>
    <string name="sign_up_pw_validation">비밀번호는 영어,숫자,특수문자를 포함하여 8~15자로 구성됩니다</string>
    <string name="sign_up_same_id_exist">동일한 아이디가 이미 존재합니다</string>
    <string name="sign_up_request_success">입력하신 이메일로 인증 메일이 발송되었습니다</string>
    <string name="sign_up_request_fail">오류로 인해 가입을 실패했습니다</string>
    <string name="sign_up_image_permission_require">사진을 촬영하기 위해선 카메라 권한이 필요합니다</string>
    <string name="sign_up_external_permission_require">사진을 선택하기 위해선 내부 저장소 접근 권한이 필요합니다</string>
    <string name="sign_up_check_email">학교 이메일을 확인해주세요 !</string>
    <string name="sign_up_send_email">이메일을 전송했습니다 !</string>
    <string name="sign_up_fail_send_email">이메일 전송을 실패했습니다</string>
    <string name="sign_up_same_nickname_exist">동일한 닉네임이 존재합니다</string>
    <string name="find_pw_send_email">임시 비밀번호를 학교 이메일로 전송합니다.</string>
    <string name="patch_title">점검</string>
    <string name="patch_content">현재 점검중입니다 죄송합니다 ㅠㅠ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_search_item_text">검색 결과가 없습니다</string>
    <string name="intent_request_code">reqCode</string>
    <string name="intent_location">location</string>
    <string name="location_delete">삭제</string>
    <string name="location_save_complete">저장이 완료되었습니다 !</string>
    <string name="location_select">선택</string>
    <string name="location_dialog_title">새로 등록할 지역의 이름을 입력해주세요 !</string>
    <string name="location_dialog_hint">여기다 입력해주세요 !</string>
    <string name="taxi_share_content_requirement_not_match">내용은 1~300자로 입력해주세요</string>
    <string name="taxi_share_title_pattern_not_match">제목 형식이 맞지않습니다</string>
    <string name="taxi_share_register_not_finish">게시글 등록이 끝나지 않았습니다 !</string>
    <string name="taxi_share_register_success">등록 성공</string>
    <string name="taxi_share_register_fail">등록 실패</string>
    <string name="splash_permission_request_title">권한 요청</string>
    <string name="splash_permission_request_content">해당 앱에서는 장소 검색 기록 저장을 위해 내부저장소 권한이 필요합니다</string>
    <string name="taxi_share_post_pop_up">&#8942;</string>
    <string name="taxi_share_post_participate">참여하기</string>
    <string name="taxi_share_pop_up_modify">수정하기</string>
    <string name="taxi_share_pop_up_remove">삭제하기</string>
    <string name="title_activity_taxi_share_info_detail">TaxiShareInfoDetailActivity</string>
    <string name="taxi_share_detail_top">상세보기</string>
    <string name="taxi_share_detail_comment_hint">댓글을 입력하세요</string>
    <string name="find_pw_toolbar_title">임시 비밀번호 발송</string>
    <string name="taxi_share_splash">KIT TaxiPool</string>
    <string name="taxi_share_leave_title">택시 합승 취소</string>
    <string name="taxi_share_leave_content">택시 합승을 취소하시겠습니까 ?</string>
    <string name="taxi_share_remove_title">합승 글 삭제</string>
    <string name="taxi_share_remove_content">합승 글을 삭제하시겠습니까 ?</string>
    <string name="my_taxi_share_title">내가 작성한 글입니다</string>
    <string name="already_participate_taxi_share_title">이미 참여중인 글입니다</string>
    <string name="taxi_share_participants_num">참여하기</string>
    <string name="nickname_format">%s (%s)</string>
    <string name="leave_taxi_share_fail">택시 합승 취소를 실패했습니다</string>
    <string name="leave_taxi_share_success">택시 합승을 취소했습니다</string>
    <string name="leave_taxi_share_waiting">택시 합승 취소를 요청중입니다</string>
    <string name="remove_taxi_share_fail">택시 합승 삭제를 실패했습니다</string>
    <string name="remove_taxi_share_success">택시 합승 글을 삭제했습니다</string>
    <string name="remove_taxi_share_waiting">택시 합승 삭제를 요청중입니다</string>
    <string name="participate_taxi_share_fail">택시 합승을 실패했습니다</string>
    <string name="participate_taxi_share_success">택시 합승을 성공했습니다</string>
    <string name="participate_taxi_share_waiting">택시 합승을 요청중입니다</string>
    <string name="taxi_share_list_last_page">마지막 페이지입니다</string>
    <string name="taxi_share_list_load_fail">합승 목록 불러오기를 실패했습니다</string>
    <string name="taxi_share_closed">이미 종료된 글입니다</string>
    <string name="already_taxi_share_started">이미 출발한 글입니다</string>
    <string name="taxi_share_list_load_not_finish">합승 목록을 불러오는 중입니다</string>
    <string name="taxi_share_participants_member_title">현재 참여자 목록(%d)</string>
    <string name="taxi_share_participants_member">%s</string>
    <string name="my_taxi_share_tip_title">현재까지 택시 합승 기록 목록입니다.\n이미 지나간(종료된) 합승 정보는 가져오지 않습니다.</string>
    <string-array name="my_page_tip_title">
        <item>- 현재까지 택시 합승 기록 목록을 보여줍니다.</item>
        <item>- 이미 종료된 합승 저오는 가져오지 않습니다</item>
    </string-array>
    <string name="no_my_list">참여한 합승이 없습니다</string>
    <string name="already_removed_taxi_share">삭제된 글입니다</string>
    <string name="remove_comment_waiting">댓글 삭제중입니다</string>
    <string name="remove_comment_fail">댓글 삭제를 실패했습니다.</string>
    <string name="remove_comment_success">댓글 삭제에 성공했습니다</string>
    <string name="load_comment_waiting">댓글을 불러오는 중입니다</string>
    <string name="load_comment_fail">댓글 불러오기에 실패했습니다</string>
    <string name="load_comment_success">댓글을 불러왔습니다</string>
    <string name="no_comment_exist">댓글이 더 존재하지 않았습니다</string>
    <string name="register_comment_success">댓글을 등록했습니다</string>
    <string name="register_comment_fail">댓글 등록을 실패하였습니다</string>
    <string name="register_comment_waiting">댓글을 등록중입니다</string>
    <string name="modify_taxi_share_success">택시 합승 정보 수정을 성공했습니다</string>
    <string name="modify_taxi_share_waiting">택시 합승 정보 수정 요청중입니다</string>
    <string name="modify_taxi_share_fail">택시 합승 정보 수정을 실패했습니다</string>
    <string name="load_detail_taxi_info_fail">데이터 불러오기를 실패했습니다. 이전 화면으로 돌아갑니다</string>
    <string name="load_detail_taxi_info_waiting">택시 합승 상세 정보를 불러오는 중입니다</string>
    <string name="load_detail_taxi_info_success">택시 합승 상세 정보를 불러왔습니다.</string>
    <string name="register_taxi_share_info_success">택시 합승 정보 등록을 성공했습니다</string>
    <string name="register_taxi_share_info_fail">택시 합승 정보 등록을 실패했습니다</string>
    <string name="register_taxi_share_info_waiting">택시 합승 정보 등록을 요청중입니다</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="start_location_title">출발 위치</string>
    <string name="end_location_title">도착 위치</string>
    <string name="start_time_title">출발 시간</string>
    <string name="party_num">참여 인원 수</string>
    <string name="no_start_location_set">출발 위치 설정</string>
    <string name="no_end_location_set">도착 위치 설정</string>
    <string name="no_start_time_set">출발 시간 설정</string>
    <string name="reset_filtering_setting">검색 조건 초기화하기</string>
</resources>