<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:minWidth="300dp"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/tv_register_dialog_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="10dp"
            android:text="@string/location_dialog_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <View android:id="@+id/divider_register_dialog_1"
          android:layout_width="0dp" android:layout_height="1dp"
          android:background="@color/common_gray"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tv_register_dialog_title"/>


    <EditText
            android:id="@+id/et_register_dialog_name"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:maxLines="1"
            android:minHeight="50dp"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:hint="@string/location_dialog_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_register_dialog_1"/>

    <Button
            android:id="@+id/btn_register_dialog_ok"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:background="@drawable/button_background_selector"
            android:enabled="false"
            android:textColor="@color/common_white"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:text="@string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_register_dialog_name"/>
    <Button
            android:id="@+id/btn_register_dialog_cancel"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cancel"
            android:background="@color/common_white"
            android:textColor="@color/common_black"
            app:layout_constraintEnd_toStartOf="@id/btn_register_dialog_ok"
            app:layout_constraintTop_toBottomOf="@id/et_register_dialog_name"/>


</androidx.constraintlayout.widget.ConstraintLayout>