<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".view.password.FindPasswordActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_find_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_std_num"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="@style/DefaultTextLayoutForm"
            app:errorEnabled="false"
            app:helperText="@string/sign_up_email_validation"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_find_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="8"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/btn_find_pw_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/temporary_pw_send"
            android:textColor="@color/common_white"
            android:background="@drawable/button_background_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_find_pw"/>

</androidx.constraintlayout.widget.ConstraintLayout>