<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginBottom="16dp"
        android:elevation="2dp"
        android:background="@color/common_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


    <!-- 시작 시간 -->
    <TextView
            android:id="@+id/tv_my_item_start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/common_black"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <!-- 출발지 -->
    <TextView
            android:id="@+id/tv_my_item_start_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            android:minWidth="100dp"
            android:text="@string/start_location_title"
            app:layout_constraintTop_toBottomOf="@id/tv_my_item_start_time"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/tv_my_item_start_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/light_black"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@id/tv_my_item_start_location_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_item_start_time"/>

    <!-- 도착지 -->
    <TextView
            android:id="@+id/tv_my_item_end_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/end_location_title"
            android:minWidth="100dp"
            app:layout_constraintTop_toBottomOf="@id/tv_my_item_start_location"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/tv_my_item_end_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/light_black"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@id/tv_my_item_end_location_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_item_start_location"/>


    <!-- 현재 참여 인원 -->
    <TextView
            android:id="@+id/tv_my_item_party_num_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/party_num"
            android:minWidth="100dp"
            app:layout_constraintTop_toBottomOf="@id/tv_my_item_end_location"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/tv_my_item_party_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/light_black"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@id/tv_my_item_party_num_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_item_end_location"
            app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>